# llm-arena

./: .gitignore  CLAUDE.md  generate_metadata.py  index.html  package-lock.json  package.json  progress.md  pyproject.toml  tailwind.config.js  test_llm_client.py  tsconfig.backend.json  tsconfig.json  vite.config.ts
.cursor/rules/: uv.mdc
dataset/: label-web-design.md
dataset/labeled-data/folder-a/: fields.json
docs/: lessons-learned.md  unsloth-guide.md
evaluate/: evaluate-result.md  evaluate_co_detector.py  evaluate_gaze_direction.py
llm_client/: __init__.py  aihubmix.py  aliyun.py  base.py  bigmodel.py  lmstudio.py
notebooks/: Qwen2_5_VL_(7B)_Vision.ipynb
scripts/: prepare_co_detector_hf.py  prepare_gaze_direction_hf.py
src/backend/: index.ts
src/backend/routes/: data.ts
src/backend/services/: imageProcessor.ts
src/frontend/: App.tsx
src/frontend/components/: AnnotationWorkspace.tsx  FieldForm.tsx  FieldSetEditor.tsx  ImageGrid.tsx
src/frontend/pages/: HomePage.tsx
src/frontend/services/: api.ts
src/frontend/store/: useAppStore.ts
src/frontend/types/: index.ts
src/llm_arena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
train/: train_qwen_vision.py
